--- a/index.html
+++ b/index.html
@@ -17,165 +17,24 @@
 
 <div class="mute" id="muteBtn">🔈</div>
 
-<div class="screen active open" id="s1">
-  <button onclick="go(2)" id="cover">Բացել</button>
-</div>
+<div id="cover" class="screen active cover" role="button" aria-label="Open letter">
+    <div class="cover-card" >
+      <h2 class="cover-title">Քեզ համար մի բան ունեմ…</h2>
+      <p class="cover-sub">Սեղմի՝ բացելու համար</p>
+    </div>
+  </div>
 
-<div class="screen" id="s2">
+<div class="screen"  id="stage">
   <div class="textbox" id="textbox">
 
   </div>
 </div>
 
-<div class="screen" id="s3">
-  <div class="textbox">
-Եղի՛ր քո կյանքին նույնքան նուրբ,
-որքան կյանքը երբեմն քեզնից է սպասում։
-
-With warmth,
-Արտակ
-  </div>
-</div>
-
-<script>
-// let current = 1;
-// const music = document.getElementById('music');
-// const muteBtn = document.getElementById('muteBtn');
-
-// // смена сцен
-// function go(n) {
-//   document.getElementById(`s${current}`).classList.remove("active");
-//   document.getElementById(`s${n}`).classList.add("active");
-//   current = n;
-
-//   if (n === 2) music.play().catch(()=>{});
-//   if (n === 3) setTimeout(()=>music.pause(),1500);
-// }
-
-// // mute
-// let muted = false;
-// muteBtn.onclick = () => {
-//   muted = !muted;
-//   music.muted = muted;
-//   muteBtn.textContent = muted ? "🔇" : "🔈";
-// };
-
-// // particles
-// const canvas = document.createElement("canvas");
-// const ctx = canvas.getContext("2d");
-// document.getElementById("particles").appendChild(canvas);
-
-// let w, h, particles = [];
-// function resize() {
-//   w = canvas.width = window.innerWidth;
-//   h = canvas.height = window.innerHeight;
-// }
-// window.onresize = resize;
-// resize();
-
-// for (let i = 0; i < 70; i++) {
-//   particles.push({
-//     x: Math.random()*w,
-//     y: Math.random()*h,
-//     s: Math.random()*1.4 + 0.4,
-//     v: Math.random()*0.4 + 0.1
-//   });
-// }
-
-// function draw() {
-//   ctx.clearRect(0,0,w,h);
-//   ctx.fillStyle = "rgba(212,162,89,0.55)";
-//   particles.forEach(p=>{
-//     ctx.beginPath();
-//     ctx.arc(p.x, p.y, p.s, 0, Math.PI*2);
-//     ctx.fill();
-//     p.y -= p.v;
-//     if (p.y < -5) p.y = h + 5;
-//   });
-//   requestAnimationFrame(draw);
-// }
-// draw();
 
 
-
-// let cover = document.getElementById('cover')
-// const typingEl = document.getElementById("textbox");
-// const fullText = `Մաշա ջան,
-
-// Կան մարդիկ, որոնք մեր կյանք չեն մտնում բարձր ձայնով։
-// Նրանք գալիս են լույսով՝ առանց կտրուկ գույների,
-// մի քիչ ամաչկոտ, մի քիչ խորք ունեցող հայացքով,
-// ու դու հենց այդպես էլ մնացիր։
-
-// Քո 20 տարին ոչ թե պարզապես թիվ է։
-// Դա այն ամենը, ինչ պատմում է քո խաղաղ ուժի, քնքշության
-// ու այն հոգու մասին, որի կողքին տաք է նույնիսկ լռության մեջ։
-
-// Թող այս օրը լինի այն նուրբ շեմը,
-// որտեղ ավարտվում են կասկածները
-// և սկսվում է կյանքը, որ իսկապես քեզնից է։
-
-// Երբ աշխարհը դառնա ծանր —
-// մի մոռացիր, որ դու ունես իշխանություն
-// փոխել շրջապատդ հենց քո լռությամբ, քո ժպիտով,
-// քո էակով։
-
-// Շնորհավոր ծնունդդ, Մաշա։
-// Երանի քեզ՝ ողջ գեղեցկությամբ, որ կրում ես։`
-
-// let lineIndex = 0, charIndex = 0;
-// let lines = fullText.split('\n');
-
-// // handle cover click
-// cover.addEventListener('click', async () => {
-//   cover.classList.add('hide');
-//   // show stage after tiny delay
-//   setTimeout(() => {
-//     stage.classList.remove('hidden');
-//     stage.classList.add('show');
-//     startTyping();
-//   }, 520);
-
-//   // attempt audio play & fade-in
-//   try {
-//     bg.volume = 0;
-//     await bg.play();
-//     fadeInVolume();
-//   } catch (e) {
-//     console.warn("Autoplay blocked:", e);
-//   }
-// });
-
-// // typing function (line by line, word-aware pause)
-// function startTyping(){
-//   typingEl.textContent = '';
-//   lineIndex = 0; charIndex = 0;
-//   typeNextLine();
-// }
-// function typeNextLine(){
-//   if (lineIndex >= lines.length) return;
-//   const line = lines[lineIndex];
-//   charIndex = 0;
-//   const timer = setInterval(()=>{
-//     if (charIndex <= line.length){
-//       // append char
-//       typingEl.textContent += line.charAt(charIndex) || '';
-//       charIndex++;
-//     } else {
-//       clearInterval(timer);
-//       typingEl.textContent += '\n';
-//       lineIndex++;
-//       // longer pause on blank line
-//       setTimeout(typeNextLine, line.trim() === '' ? 400 : 420);
-//     }
-//   }, 28);
-// }
-
-
-
-
-</script>
 <script src="scriptNew.js"></script>
 
 </body>
 </html>
+
+
